--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,12 @@
 inherit_from: .rubocop_todo.yml
+
+AllCops:
+  TargetRubyVersion: '2.5'
+
+Metrics/BlockLength:
+  Exclude:
+    - vagas_commons.gemspec
+  
+Metrics/MethodLength:
+  Exclude:
+    - vagas_commons.gemspec
